--- a/mart/package.json
+++ b/mart/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.0",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
